Fix discography card too big

--- a/src/styles/pages/discography.scss
+++ b/src/styles/pages/discography.scss
@@ -1,6 +1,6 @@
 .discography-layout {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(22rem, 1fr));
   gap: 1em;
   margin: .75rem;
 }
